//
//  TopNavigationStackView.swift
//  TinderFireStoreEB
//
//  Created by Eugene Berezin on 7/17/19.
//  Copyright © 2019 Eugene Berezin. All rights reserved.
//

import UIKit
import LBTATools

class TopNavigationStackView: UIStackView {
    
    let settingsButton = UIButton(type: .system)
    let messageButton = UIButton(type: .system)
    let fireImageView = UIImageView(image: #imageLiteral(resourceName: "app_icon"))
    

    override init(frame: CGRect) {
        super.init(frame: frame)
        
        settingsButton.accessibilityIdentifier        = "SETTINGS_BUTTON"
        messageButton.accessibilityIdentifier         = "MESSAGE_BUTTON"
        fireImageView.accessibilityIdentifier         = "FIRE_IMAGE"
        
        heightAnchor.constraint(equalToConstant: 80).isActive = true
        
        fireImageView.contentMode = .scaleAspectFit
    
        settingsButton.setImage(#imageLiteral(resourceName: "top_left_profile").withRenderingMode(.alwaysOriginal), for: .normal)
        messageButton.setImage(#imageLiteral(resourceName: "top_right_messages").withRenderingMode(.alwaysOriginal), for: .normal)
        
        [settingsButton, UIView(), fireImageView, UIView(), messageButton].forEach { (v) in
            addArrangedSubview(v)
        }
        
        distribution                       = .equalCentering
        isLayoutMarginsRelativeArrangement = true
        layoutMargins                      = .init(top: 0, left: 12, bottom: 0, right: 16)
        
    }
    
    required init(coder: NSCoder) {
        fatalError("init(coder:) has not been implemented")
    }
    
}
